--- a/inventory_management/templates/admin.html
+++ b/inventory_management/templates/admin.html
@@ -7,6 +7,7 @@
 {% block signed_in_navbar %}{% endblock %}
 
 {% block content %}
+<!-- Author - Jake Lazaros -->
 <h2>Admin Report</h2>
 <hr>
 <h5>Total Equipment: {{ equipment_count }}</h5>
