--- a/inventory_management/templates/base.html
+++ b/inventory_management/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Author - Jake Lazaros, Daniil Lebedev, Carlo Atsu, Saddam Boudaboussa -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
