--- a/inventory_management/templates/equipment.html
+++ b/inventory_management/templates/equipment.html
@@ -8,6 +8,7 @@
 
 {% block content %}
 <h2>Equipment</h2>
+<!-- Author - Jake Lazaros, Hussain Abdallah, Jibran Jehangir -->
 <hr>
 
 <h4>Filter</h4>
