--- a/inventory_management/templates/login.html
+++ b/inventory_management/templates/login.html
@@ -6,6 +6,7 @@
 
 {% block content %}
 <h2>Login</h2>
+<!-- Author - Jake Lazaros -->
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
