--- a/inventory_management/templates/make_reservation.html
+++ b/inventory_management/templates/make_reservation.html
@@ -9,6 +9,7 @@
 {% block content %}
 <h2>Make Reservation</h2>
 <hr>
+<!-- Author - Jake Lazaros, Hibba Elgalal -->
 
 <h5>Device Name: {{ equipment.name }}</h5>
 <h5>Device Type: {{ equipment.get_type_display }}</h5>
