--- a/inventory_management/templates/reservations.html
+++ b/inventory_management/templates/reservations.html
@@ -9,6 +9,7 @@
 {% block content %}
 <h2>Reservations</h2>
 <hr>
+<!-- Author - Jake Lazaros, Hibba Elgalal -->
 <div class="table-responsive">
     <table class="table table-bordered" id="activeResTable">
         <tbody>
